# annotate-output

./: Cargo.toml  README.md
src/: main.rs
