[package]
name = "annotate-output"
description = "Executes a program annotating the output linewise with time and stream"
version = "0.1.1"
authors = ["Daniel Lin <ephemient@gmail.com>"]
license = "GPL-2.0-only"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/ephemient/annotate-output"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
nix = "0.24"
